syntax = "proto3";
package chat;
option go_package = "/activity";

service ActivityService {
  rpc GetUserActivities (GetUserActivityReq) returns (GetUserActivityResp) {}
  rpc CreateUserActivity (CreateUserActivityReq) returns (CreateUserActivityResp) {}
}

message Activity {
  int64 activity_id = 1;
  int64 user_id = 2;
  int64  relation_id = 3;
  string type = 4;
  string description = 5;
}

message GetUserActivityReq {
  int64 user_id = 1;
}

message GetUserActivityResp {
  repeated Activity activities = 1;
  int32 chat_count = 2;
  int32 memoir_count = 3;
  int32 use_day = 4;
}

message CreateUserActivityReq {
  int64 user_id = 1;
  int64 relation_id = 2;
  string type = 3;
  string description = 4;
}

message CreateUserActivityResp {
   bool success = 1;
   string message = 2;
   Activity activity = 3;
}